--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
     implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
+
+    // navigation
+    implementation 'androidx.navigation:navigation-compose:2.5.2'
 }
