--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,5 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+    implementation 'io.coil-kt:coil-compose:2.2.1'
 }
