--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,6 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
     implementation 'io.coil-kt:coil-compose:2.2.1'
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
 }
