--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'nl.narvekar.abhishek.omring_fluid_intake_app'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "nl.narvekar.abhishek.omring_fluid_intake_app"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -73,4 +73,8 @@ dependencies {
     implementation 'io.coil-kt:coil-compose:2.2.1'
 
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+
+    //paging
+    implementation 'androidx.paging:paging-common-ktx:3.0.0'
+    implementation 'androidx.paging:paging-compose:1.0.0-alpha16'
 }
