--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -60,6 +62,7 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
 
     implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
 
@@ -77,4 +80,6 @@ dependencies {
     //paging
     implementation 'androidx.paging:paging-common-ktx:3.0.0'
     implementation 'androidx.paging:paging-compose:1.0.0-alpha16'
+
+
 }
